--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/sonoda/anaconda3/envs/py38/bin/python"
+    "python.pythonPath": "/home/sonoda/anaconda3/envs/py38/bin/python",
+    "git.ignoreLimitWarning": true
 }
